@@ -1,3 +1,7 @@
+2001-11-10  Bob Montgomery  <bob_montgomery@hp.com>
+
+	* module/oprofile.c: fix pid/pgrp filter to reset counter 
+
 2001-11-08  John Levon  <moz@compsoc.man.ac.uk>
 
 	* TODO: update
